Add SEO and Open Graph metadata to improve visibility and sharing

--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="jrnal.png" type="image/x-icon">
+
+    <!-- Basic SEO -->
+    <meta name="description" content="A simple, fast, and minimal notepad app for quick notes and ideas.">
+    <meta name="keywords" content="notepad, notes, journal, writing, minimal app">
+    <meta name="author" content="Your Name">
+
+    <!-- Open Graph (for social media previews) -->
+    <meta property="og:title" content="Notepad">
+    <meta property="og:description" content="A simple, fast, and minimal notepad app for quick notes and ideas.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./notepad.png">
+    <meta property="og:url" content="https://notepadbyade.vercel.app/">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Notepad">
+    <meta name="twitter:description" content="A simple, fast, and minimal notepad app for quick notes and ideas.">
+    <meta name="twitter:image" content="./notepad.png">
+
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="./notepad.png" type="image/x-icon">
+
+    <!-- Styles & Scripts -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+
     <title>Notepad</title>
+
 </head>
 
 <body>
