made the input required

--- a/login.html
+++ b/login.html
@@ -18,8 +18,8 @@
             <form id="frm" class="form">
                 <div class="form-box">
                     <h1>Log In</h1>
-                    <input id="mail" type="email" placeholder="Enter your mail">
-                    <input id="password" type="password" placeholder="Enter your password">
+                    <input id="username" type="text" placeholder="Enter your username" required>
+                    <input id="password" type="password" placeholder="Enter your password" required>
                     <p>Don't have an account? <a href="/">Sign In</a></p>
                     <button type="submit">Log In</button>
                 </div>
