--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <form id="frm" class="form">
                 <div class="form-box">
                     <h1>Sign Up</h1>
-                    <input id="username" type="text" placeholder="Enter your username">
-                    <input id="mail" type="email" placeholder="Enter your mail">
-                    <input id="password" type="password" placeholder="Enter your password">
-                    <input type="password" placeholder="Confirm your password">
+                    <input id="username" type="text" placeholder="Enter your username" required>
+                    <input id="mail" type="email" placeholder="Enter your mail" required>
+                    <input id="password" type="password" placeholder="Enter your password" required>
+                    <input type="password" placeholder="Confirm your password" required>
                     <p>Do you have an account? <a href="./login.html">Log In</a></p>
                     <button type="submit">Sign In</button>
                 </div>
