added forgot password

--- a/forgot.html
+++ b/forgot.html
@@ -40,12 +40,9 @@
             <div class="bg"></div>
             <form id="frm" class="form">
                 <div class="form-box">
-                    <h1>Log In</h1>
-                    <input id="username" type="text" placeholder="Enter your username" required>
-                    <input id="password" type="password" placeholder="Enter your password" required>
-                    <p>Don't have an account? <a href="/">Sign In</a></p>
-                    <a href="./forgot.html" id="fgt">Forgot your password?</a>
-                    <button type="submit">Log In</button>
+                    <h1>Reset Password</h1>
+                    <input id="mail" type="email" placeholder="Enter your mail" required>
+                    <button type="submit">Submit</button>
                 </div>
             </form>
         </div>
