--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="shortcut icon" href="./notepad.png" type="image/x-icon">
 
     <!-- Styles & Scripts -->
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <script defer src="script.js"></script>
 
     <title>Notepad</title>
